@@ -6,6 +6,7 @@ include libgearman-1.0/t/include.am
 
 nobase_include_HEADERS+= libgearman-1.0/interface/status.h
 nobase_include_HEADERS+= libgearman-1.0/interface/task.h
+nobase_include_HEADERS+= libgearman-1.0/status.h
 nobase_include_HEADERS+= \
 			 libgearman-1.0/actions.h \
 			 libgearman-1.0/aggregator.h \
